--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
 
         <section id="logged-in-view">
             <div class="container">
+                <div class="log-out">
+                    <img id="log-out-button" src="assets/log-out-icon.png">
+                </div>
                 <img src="assets/cat.jpg">
                 <input type="text" id="input-field" placeholder="Bread">
                 <button id="add-button">Add to cart</button>
