--- a/index.html
+++ b/index.html
@@ -34,9 +34,12 @@
                 <div class="log-out">
                     <img id="log-out-button" src="assets/log-out-icon.png">
                 </div>
-                <img src="assets/cat.jpg">
+                <!-- <img src="assets/cat.jpg"> -->
                 <input type="text" id="input-field" placeholder="Bread">
                 <button id="add-button">Add to cart</button>
+                <div class="alert-section">
+                    <p>Add an item!</p>
+                </div>
                 <div class="container2">
                     <ul id="shopping-list"> 
                     </ul>
