--- a/index.html
+++ b/index.html
@@ -56,4 +56,7 @@
         
         <script src="index.js" type="module"></script>
     </body>
+    <div class="footer">
+        <p>Made with 💜 by <a href="https://bento.me/dyarmsh">Diya</a></p>
+    </div>
 </html>
